--- a/src/components/ThemeSelector.css
+++ b/src/components/ThemeSelector.css
@@ -13,6 +13,7 @@
   cursor: pointer;
   margin-left: 15px;
   border-radius: 50%;
+  border: 1px solid #555;
 }
 .mode-toggle {
   padding-top: 2px;
