--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,8 @@
 .navbar {
   transition: all ease-in 0.3s;
   background: rebeccapurple;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   color: white;
 }
 .navbar nav {
